# Windows-Translator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_clipboard_plugin.rs  app_global_shortcut_plugin.rs  app_run.rs  app_setup.rs  app_setup_autostart.rs  app_setup_autostart_plugin.rs  app_setup_hotkey.rs  app_setup_settings.rs  app_setup_tray.rs  app_setup_window.rs  app_state.rs  app_window_close_event.rs  app_window_event.rs  app_window_focus_event.rs  autostart.rs  lib.rs  main.rs
src-tauri/src/api/: mod.rs  openai_client.rs  openai_request.rs  openai_types.rs  prompt.rs  sse_parser.rs  stream_event.rs  thinking_filter.rs
src-tauri/src/commands/: clipboard.rs  history.rs  hotkey.rs  mod.rs  settings.rs  settings_autostart.rs  settings_hotkey.rs  settings_window.rs  translate.rs  translation_api_key.rs  translation_history_append.rs  translation_history_item.rs  window.rs
src-tauri/src/config/: app_config.rs  app_settings_default.rs  app_settings_language_pair.rs  app_settings_normalize.rs  default_api.rs  default_hotkeys.rs  default_languages.rs  default_model.rs  default_settings_version.rs  default_window.rs  defaults.rs  language_pair.rs  mod.rs
src-tauri/src/hotkey/: global_hotkey.rs
src-tauri/src/storage/: history_store.rs  mod.rs  paths.rs  settings_store.rs
src-tauri/src/tray/: app_tray.rs  mod.rs  tray_icon_event.rs  tray_menu.rs  tray_menu_event.rs  tray_quit_action.rs  tray_settings_action.rs  tray_show_action.rs
(+107 files in other folders)
